--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@number-flow/svelte": "^0.3.6",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"bits-ui": "^1.3.16",
 		"d3": "^7.9.0",
 		"dayjs": "^1.11.13",
