start: Initial d3 import from 2024.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"cSpell.ignoreWords": ["KILATISKO", "PASABOG"]
+	"cSpell.ignoreWords": ["KILATISKO", "PASABOG"],
+	"cSpell.words": ["Anthro", "cllr", "Lingg", "Macam", "nonvote", "Patawaran", "saligan"]
 }
