--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"bits-ui": "^1.3.16",
 		"d3": "^7.9.0",
+		"d3-parliament": "^1.0.1",
+		"d3-parliament-chart": "^0.0.6",
 		"dayjs": "^1.11.13",
 		"ntp-time": "^2.0.6"
 	}
